[tool.poetry]
name = "stiff"
version = "0.0.5"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
adjusttext = "=0.7.3"
pareto = "^1.1"
cython = "^0.29.2"
brokenaxes = "=0.3.1"
jsondiff = "^1.1"
click-log = "^0.3.2"
click = ">=6.7"
plumbum = "^1.6.6"
pyahocorasick = { git = "https://github.com/frankier/pyahocorasick.git", branch = "stiff-2018-09-20-3" }
pygtrie = "^2.2"
opencc = "^0.2"
opus-api = "^0.6.2"
finntk = ">=0.0.62"
streamz = "^0.3.0"
lxml = "^4.2.3"
conllu = "^1.1"
pandas = "^1.1.2"
seaborn = "^0.10.0"
statsmodels = "^0.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.5.0"
pre-commit = "^1.10.2"
pytest = "^5.0.1"
mypy = "0.782"
tox = "^3.13"
black = {version = "^19.3b0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
