[metadata]
description-file = README.md

[flake8]
ignore = E741, W503, E501, E203
max-line-length = 88

[mypy-pygtrie.*]
ignore_missing_imports = True

[mypy-lxml.*]
ignore_missing_imports = True

[mypy-streamz.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-finntk.*]
ignore_missing_imports = True

[mypy-nltk.*]
ignore_missing_imports = True

[mypy-conllu.*]
ignore_missing_imports = True

[mypy-ahocorasick.*]
ignore_missing_imports = True

[mypy-plumbum.*]
ignore_missing_imports = True

[mypy-omorfi.*]
ignore_missing_imports = True

[mypy-opencc.*]
ignore_missing_imports = True
